Included Maps Images
This is part of Capstone Project Data Science IBM Training for Week 1

--- a/Capstone_Project_CarlosMolina_Week1.ipynb
+++ b/Capstone_Project_CarlosMolina_Week1.ipynb
@@ -256,7 +256,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Päris Districts Figure](paris_districts_fig_cropped.png \"Paris Districts\")"
+    "![Paris Districts Figure](paris_districts_fig_cropped.png \"Paris Districts\")"
    ]
   },
   {
