--- a/Capstone_Project_CarlosMolina_Week1.ipynb
+++ b/Capstone_Project_CarlosMolina_Week1.ipynb
@@ -18,6 +18,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 1.1 Problem Relevance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Our client is an Investor Group, who owns several Companies in United States and they want to open two new Businesses Branches in Paris and London. They want to be able to share resources and knowledge across both Business. They want to identify what kind of businesses are successful on both cities and to identify neighborhoods with similar profiles and characteristics."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### As a way to leverage what was learned in previous modules from this course, I had chosen to compare how similar or dissimilar are two important European Cities, Financial Capitals of two Countries. As these two cities are geographically near, I chose to compare Paris and London, by obtaining the number and type of Foursquare Venues close to the center coordinates (Latitude and Longitude) of each Neighborhood."
    ]
   },
@@ -26,6 +40,20 @@
    "metadata": {},
    "source": [
     "#### As cities are geographically near, chosen cities, would allow to use the K-Means Clustering and Geographical Information that can be graphically shown in the same map. Clusters will allow to group Neighborhoods, based on similar characteristics (frequency and types of Foursquare Venues)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.2 Problem Audience"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Our stakeholders are Finance executives who will coordinate a market and business viability studies to determine the expected market and return of investment for the new Business, once our team provides a suggestion and justification on which business should they open and on which neighborhoods."
    ]
   },
   {
